comment out some developer hints

--- a/www_dir/directory/hausarbeit/in8schritten.html
+++ b/www_dir/directory/hausarbeit/in8schritten.html
@@ -116,13 +116,13 @@ Gliedern heißt,
             <li> Bericht über Interviews mit Betroffenen</li>
         </ol>
     </li>
-    <li> Schluss [Beim Klick auf „Schluss“ werden die passenden Ergebnisse aus „Ausarbeitung“ angezeigt]
+    <li> Schluss<!-- [Beim Klick auf „Schluss“ werden die passenden Ergebnisse aus „Ausarbeitung“ angezeigt] -->
     	<ol>
         	<li> Abschließende Bemerkungen - Zusammenfassung / Fazit </li>
             <li> Blick in die Zukunft </li>
 		</ol>
     </li>
-    <li> Literaturverzeichnis [Pop- Up,beim Klick auf „Literaturverzeichnis“ werden die passenden Ergebnisse aus „Ausarbeitung“ – 6.2.8 - 
+    <li> Literaturverzeichnis<!-- [Pop- Up,beim Klick auf „Literaturverzeichnis“ werden die passenden Ergebnisse aus „Ausarbeitung“ – 6.2.8 - -->
     </li>
 </ol>
     
