some more little corrections

--- a/www_dir/directory/wieSucheIch/festlegungVonSuchbegriffen.html
+++ b/www_dir/directory/wieSucheIch/festlegungVonSuchbegriffen.html
@@ -47,7 +47,7 @@
                 	(u.a. Synonyme, Ober- und Unterbegriffe, Wortwolken, Links zu Artikeln der Wochenzeitung DIE ZEIT und ZEIT online)
             </li>
         	<li><a class="external-link" href="http://www.duden.de/keywords">Duden</a> (Synonyme)</li>
-        	<li><a class="external-link" href="http://wortschatz.uni-leipzig.de">Wortschatz</a> (u.a. Synonyme, Ober- und Unterbegriffe,verwandte Begriffe</a></li>
+        	<li><a class="external-link" href="http://wortschatz.uni-leipzig.de">Wortschatz</a> (u.a. Synonyme, Ober- und Unterbegriffe,verwandte Begriffe)</a></li>
             <li>
             	<a class="external-link" href="http://de.wikipedia.org">Wikipedia</a>
             </li>
