--- a/www_dir/directory/wasGefunden/terfferlisten.html
+++ b/www_dir/directory/wasGefunden/terfferlisten.html
@@ -1,5 +1,5 @@
 <div class="pagewrapper">
-	<h2>Trefferlisten bewerten</h2>
+	<h2>Trefferleisten bewerten</h2>
 	<p><strong>Beispiel:</strong> 
     	Ihr Thema  lautet: „Angela Merkel – Ihre Politik und Wahlkämpfe“. 
         Sie  suchen dafür nach Literatur im <span class="glossar KOBV">KOBV</span> und erhalten eine Menge an Treffern.  
