changes in license, imprint and section 3

--- a/www_dir/directory/woSucheIch/bibliotheksverbundkataloge.html
+++ b/www_dir/directory/woSucheIch/bibliotheksverbundkataloge.html
@@ -1,196 +1,187 @@
 <div class="pagewrapper">
-	<h2 id="Bibliotheksverbundkataloge">Bibliotheksverbundkataloge</h2>
-    <h3 id="Gleichzeitige_Suche_in_mehreren_Katalogen">Gleichzeitige Suche in mehreren Katalogen</h3>
-    <p>
-		Sie haben im Katalog Ihrer Bibliothek nichts Passendes gefunden? 
-        Im sogenannten Verbundkatalog kann mit einer einzigen Suchanfrage 
-        gleichzeitig in den Katalogen aller Bibliotheken, die am Verbund 
-        beteiligt sind, gesucht werden.
-    </p>
-    <p>
-    <strong>Relevante Verbundkataloge für die Recherche und die Fernleihe:</strong>
-    <p>
-    	<ul>
-        	<li> 
-            		<a class="popup-link popup-1" href="">Kooperative Bibliotheksverbund Berlin-Brandenburg (KOBV)</a> 
-            		für die meisten wissenschaftlichen Bibliotheken in Berlin und Brandenburg 
-            </li>
-            <li>
-            		<a class="popup-link popup-2" href="">Verbund Öffentlicher Bibliotheken Berlins (VÖBB)</a> für öffentliche Bibliotheken in Berlin
-            </li>
-            <li>
-					<a class="popup-link popup-3" href="">Gemeinsamer Verbundkatalog (GVK)</a> für die Staatsbibliothek Preußischer 
-                    Kulturbesitz Berlin und die Universitätsbibliothek Potsdam.            
-            </li>
-       	</ul>
-	</p>
+  <h2 id="Bibliotheksverbundkataloge">Bibliotheksverbundkataloge</h2>
+  <h3 id="Gleichzeitige_Suche_in_mehreren_Katalogen">Gleichzeitige Suche in
+    mehreren Katalogen</h3>
+  <p>Sie haben im Katalog Ihrer Bibliothek nichts Passendes gefunden? Im
+    sogenannten Verbundkatalog kann mit einer einzigen Suchanfrage gleichzeitig
+    in den Katalogen aller Bibliotheken, die am Verbund beteiligt sind, gesucht
+    werden.</p>
+  <p>
+    <strong>Relevante Verbundkataloge für die Recherche und die
+      Fernleihe:</strong>
+  <p>
+  <ul>
+    <li><a
+      class="popup-link popup-1"
+      href="">Kooperative Bibliotheksverbund Berlin-Brandenburg (KOBV)</a> für
+      die meisten wissenschaftlichen Bibliotheken in Berlin und Brandenburg</li>
+    <li><a
+      class="popup-link popup-2"
+      href="">Verbund Öffentlicher Bibliotheken Berlins (VÖBB)</a> für
+      öffentliche Bibliotheken in Berlin</li>
+    <li><a
+      class="popup-link popup-3"
+      href="">Gemeinsamer Verbundkatalog (GVK)</a> für die Staatsbibliothek
+      Preußischer Kulturbesitz Berlin und die Universitätsbibliothek Potsdam.</li>
+  </ul>
+  </p>
 </div>
 <div class="popup-wrapper popup popup-1">
-    <h3>
-		<a class="external-link" href="http://vs13.kobv.de/V?portal=KOBV&institute=KOBV&func=meta-1&mode=advanced">    
-    		Kooperativer Bibliotheksverbund Berlin-Brandenburg
-        </a>
-    </h3>    
-    <p><strong>Vorteile des KOBV</strong> - Hier finden Sie mit einer Anfrage:</p>
-	<ul>
-		<li>
-        	die <a class="external-link" href=" http://www.kobv.de/ueber_den_kobv/kobv_bibliotheken/">
-            		Bestände der wissenschaftlichen und öffentlichen Bibliotheken in Berlin und Brandenburg
-                </a> 
-        </li>
-        <li>
- 			die Bestände aus anderen deutschen Bibliotheksverbünden und großen internationalen Bibliotheken und Verbünden
-		</li>
-        <li>
- 			Bücher können über die Fernleihe [Klick öffnet Kapitel zur Fernleihe in einem neuen Tab] aus einer 
-			anderen Bibliothek bestellt werden, wenn man in einer wissenschaftlichen Bibliothek in Berlin oder 
-            Brandenburg angemeldet ist (ausgenommen sind die UB Potsdam und die Staatsbibliothek Berlin - 
-            diese benutzen den GVK, siehe unten).
-		</li>
-    </ul>
+  <h3>
+    <a
+      class="external-link"
+      href="http://portal.kobv.de">Kooperativer Bibliotheksverbund Berlin-Brandenburg</a>
+  </h3>
+  <p>
+    <strong>Vorteile des KOBV</strong> - Hier finden Sie mit einer Anfrage:
+  </p>
+  <ul>
+    <li>die <a
+      class="external-link"
+      href=" http://www.kobv.de/ueber_den_kobv/kobv_bibliotheken/"> Bestände
+        der wissenschaftlichen und öffentlichen Bibliotheken in Berlin und
+        Brandenburg </a>
+    </li>
+    <li>die Bestände aus anderen deutschen Bibliotheksverbünden und großen
+      internationalen Bibliotheken und Verbünden</li>
+    <li>Bücher können über die Fernleihe [Klick öffnet Kapitel zur
+      Fernleihe in einem neuen Tab] aus einer anderen Bibliothek bestellt
+      werden, wenn man in einer wissenschaftlichen Bibliothek in Berlin oder
+      Brandenburg angemeldet ist (ausgenommen sind die UB Potsdam und die
+      Staatsbibliothek Berlin - diese benutzen den GVK, siehe unten).</li>
+  </ul>
 </div>
-
 <div class="popup-wrapper popup popup-2">
-
-	<h3>
-    	<a href="https://www.voebb.de/" class="external-link">
-    	Verbund Öffentlicher Bibliotheken Berlins
-        </a>
-    
-    </h3>
-	<p><strong>Hier finden Sie mit einer Suchanfrage:</strong></p>
-   	<ul> 
-		<li>
-        	die Bestände aller beteiligten öffentlichen Stadt-, Stadtteil- und Mittelpunktbibliotheken 
-            sowie der Zentral- und Landesbibliothek Berlin: 
-            <a class="external-link" href="http://service.berlin.de/stadtbibliotheken/">Liste der beteiligten Bibliotheken</a> 
-        </li>
-        <li>    
-			die Datenbanken des Munzinger Archivs,
-            wenn man in einer öffentlichen Bibliothek Berlins angemeldet ist
-		</li>
-        <li>
-			Bücher kann man über die Fernleihe bestellen und aus einer anderen Bibliothek beschaffen 
-            lassen, wenn man in einer öffentlichen Bibliothek Berlins angemeldet ist.
-		</li>
-	</ul>
+  <h3>
+    <a
+      href="https://www.voebb.de/"
+      class="external-link"> Verbund Öffentlicher Bibliotheken Berlins </a>
+  </h3>
+  <p>
+    <strong>Hier finden Sie mit einer Suchanfrage:</strong>
+  </p>
+  <ul>
+    <li>die Bestände aller beteiligten öffentlichen Stadt-, Stadtteil- und
+      Mittelpunktbibliotheken sowie der Zentral- und Landesbibliothek Berlin: <a
+      class="external-link"
+      href="http://service.berlin.de/stadtbibliotheken/">Liste der
+        beteiligten Bibliotheken</a>
+    </li>
+    <li>die Datenbanken des Munzinger Archivs, wenn man in einer
+      öffentlichen Bibliothek Berlins angemeldet ist</li>
+    <li>Bücher kann man über die Fernleihe bestellen und aus einer anderen
+      Bibliothek beschaffen lassen, wenn man in einer öffentlichen Bibliothek
+      Berlins angemeldet ist.</li>
+  </ul>
 </div>
-
 <div class="popup-wrapper popup popup-3">
-    <h3>
-    	<a class="external-link" href="http://www.gbv.de/gsomenu">
-			Gemeinsamer Verbundkatalog / GVK plus
-    	</a>
-    </h3>
-	<p><strong>Diesen Verbundkatalog benutzen Sie für die Fernleihe und Recherche in:</strong></p>
-    <ul>
-        <li>
-            der Staatsbibliothek zu Berlin und in der Universitätsbibliothek Potsdam.
-            Über den GVKplus finden Sie in diesen Bibliotheken auch Zeitschriftenartikel.
-            <ul>
-                <li><a class="external-link" href="http://www.gbv.de/benutzer/datenbanken/hilfe">
-                        TIPP: Hier erhalten sie Infos zu speziellen Funktionen des Katalogs.
-                    </a>
-                </li>
-            </ul>    
-        </li>
-        <li>   
-            Bücher kann man über die Fernleihe 
-            bestellen, wenn man einen Benutzerausweis der Staatsbibliothek zu Berlin oder der 
-            Universitätsbibliothek Potsdam besitzt.
-        </li>
-    </ul>
+  <h3>
+    <a
+      class="external-link"
+      href="http://www.gbv.de/gsomenu"> Gemeinsamer Verbundkatalog / GVK
+      plus </a>
+  </h3>
+  <p>
+    <strong>Diesen Verbundkatalog benutzen Sie für die Fernleihe und
+      Recherche in:</strong>
+  </p>
+  <ul>
+    <li>der Staatsbibliothek zu Berlin und in der Universitätsbibliothek
+      Potsdam. Über den GVKplus finden Sie in diesen Bibliotheken auch
+      Zeitschriftenartikel.
+      <ul>
+        <li><a
+          class="external-link"
+          href="http://www.gbv.de/benutzer/datenbanken/hilfe"> TIPP: Hier
+            erhalten sie Infos zu speziellen Funktionen des Katalogs. </a></li>
+      </ul>
+    </li>
+    <li>Bücher kann man über die Fernleihe bestellen, wenn man einen
+      Benutzerausweis der Staatsbibliothek zu Berlin oder der
+      Universitätsbibliothek Potsdam besitzt.</li>
+  </ul>
 </div>
-
 <div class="pagewrapper">
-	<h3 id="Fernleihe">Fernleihe</h3>
-    <p> 
-		In Ihrer Bibliothek ist ein bestimmtes Buch oder eine für Sie wichtige Zeitschrift nicht vorhanden?
-    </p>
-    <p>
-    	<ul>
-        	<li>Bücher kann man über die Fernleihe bestellen und aus einer anderen Bibliothek beschaffen lassen.</li>
-            <li>Einen Zugang zu digital vorhandener Zeitschriftenliteratur bietet die 
-            <a href="#Elektronische_Zeitschriftenbibliothek">Elektronische Zeitschriftenbibliothek EZB </a>.</li>
-        </ul>
-    </p>        
+  <h3 id="Fernleihe">Fernleihe</h3>
+  <p>In Ihrer Bibliothek ist ein bestimmtes Buch oder eine für Sie wichtige
+    Zeitschrift nicht vorhanden?</p>
+  <p>
+  <ul>
+    <li>Bücher kann man über die Fernleihe bestellen und aus einer anderen
+      Bibliothek beschaffen lassen.</li>
+    <li>Einen Zugang zu digital vorhandener Zeitschriftenliteratur bietet
+      die <a href="#Elektronische_Zeitschriftenbibliothek">Elektronische
+        Zeitschriftenbibliothek EZB </a>.
+    </li>
+  </ul>
+  </p>
 </div>
-
 <div class="pagewrapper">
-	<h3 id="Wie_bestelle_ich_Buecher_ueber_die_Fernleihe">Wie bestelle ich Bücher über die Fernleihe?</h3>
-    <p>
-    	<ol>
-        	<li>
-            	Suchen Sie auf der Homepage der Bibliothek, bei der Sie Kunde sind, den Service „Fernleihe“.
-            </li>
-        	<li>
-            	Sie werden je nach Bibliothek auf die Webseiten verschiedener Verbundkataloge verwiesen:
-                <ul>
-                	<li> 
-                    	für die wissenschaftlichen Bibliotheken in Berlin 
-                        (Achtung: Ausnahme Universitätsbibliothek Potsdam und Staatsbibliothek zu Berlin): 
-                        <a class="external-link" href="http://www.kobv.de">KOBV</a> 
-                    </li>
-                    <li> 
-                    	für die öffentlichen Bibliotheken in Berlin: <a class="external-link" href="https://www.voebb.de">VÖBB</a>
-                    </li>                	
-                    <li> 
-						für die Staatsbibliothek zu Berlin und die Universitätsbibliothek Potsdam: 
-                        <a class="external-link" href="http://gso.gbv.de">GVK</a> 
-                    </li>
-                </ul>
-            </li>
-            <li>
-            	Tragen Sie dort Ihren gesuchten Titel in das Suchfeld ein - die Bibliotheken, die das Buch führen, werden angezeigt.
-            </li>
-            <li>
-            	Aktivieren Sie dort den jeweiligen Link zur Fernleihe.
-            </li>
-            <li>
-            	Die besitzende Bibliothek schickt den Titel an Ihre Bibliothek.
-            </li>
-            <li>Sie können das Buch gegen eine geringe Gebühr bestellen.</li>
-            <li>
-            	Sie geben das Buch in Ihrer Bibliothek wieder zurück. 
-            	Dann wird es wieder an die besitzende Bibliothek zurückgesendet.            
-            </li>
-        </ol>
-	<p>
-     	Für öffentliche Bibliotheken in Brandenburg: Wenden Sie sich bitte direkt an Ihre Bibliothek 
-        oder schauen Sie auf deren Webseite nach.
-	</p>
-    
-    </p>
-    <h4>Tipp:</h4>        
-    <ul>
-        <li>
-        	Planen Sie für die Fernleihe genügend Zeit ein. 
-            Es kann bis zu zwei, drei Wochen dauern, 
-            bis das Buch in Ihrer Bibliothek angekommen ist.
+  <h3 id="Wie_bestelle_ich_Buecher_ueber_die_Fernleihe">Wie bestelle ich
+    Bücher über die Fernleihe?</h3>
+  <p>
+  <ol>
+    <li>Suchen Sie auf der Homepage der Bibliothek, bei der Sie Kunde sind,
+      den Service „Fernleihe“.</li>
+    <li>Sie werden je nach Bibliothek auf die Webseiten verschiedener
+      Verbundkataloge verwiesen:
+      <ul>
+        <li>für die wissenschaftlichen Bibliotheken in Berlin (Achtung:
+          Ausnahme Universitätsbibliothek Potsdam und Staatsbibliothek zu
+          Berlin): <a
+          class="external-link"
+          href="http://www.kobv.de">KOBV</a>
         </li>
-        <li>
-        	Sollten Sie Fragen haben oder sich nicht sicher sein, 
-            können Sie sich jederzeit an die Auskunft Ihrer Bibliothek wenden. 
-            Hier kann man Ihnen weiterhelfen.
-       	</li>
-    </ul>
+        <li>für die öffentlichen Bibliotheken in Berlin: <a
+          class="external-link"
+          href="https://www.voebb.de">VÖBB</a>
+        </li>
+        <li>für die Staatsbibliothek zu Berlin und die
+          Universitätsbibliothek Potsdam: <a
+          class="external-link"
+          href="http://gso.gbv.de">GVK</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tragen Sie dort Ihren gesuchten Titel in das Suchfeld ein - die
+      Bibliotheken, die das Buch führen, werden angezeigt.</li>
+    <li>Aktivieren Sie dort den jeweiligen Link zur Fernleihe.</li>
+    <li>Die besitzende Bibliothek schickt den Titel an Ihre Bibliothek.</li>
+    <li>Sie können das Buch gegen eine geringe Gebühr bestellen.</li>
+    <li>Sie geben das Buch in Ihrer Bibliothek wieder zurück. Dann wird es
+      wieder an die besitzende Bibliothek zurückgesendet.</li>
+  </ol>
+  <p>Für öffentliche Bibliotheken in Brandenburg: Wenden Sie sich bitte
+    direkt an Ihre Bibliothek oder schauen Sie auf deren Webseite nach.</p>
+  </p>
+  <h4>Tipp:</h4>
+  <ul>
+    <li>Planen Sie für die Fernleihe genügend Zeit ein. Es kann bis zu
+      zwei, drei Wochen dauern, bis das Buch in Ihrer Bibliothek angekommen ist.
+    </li>
+    <li>Sollten Sie Fragen haben oder sich nicht sicher sein, können Sie
+      sich jederzeit an die Auskunft Ihrer Bibliothek wenden. Hier kann man
+      Ihnen weiterhelfen.</li>
+  </ul>
 </div>
-
 <div class="pagewrapper">
-	<h3 id="Elektronische_Zeitschriftenbibliothek">Elektronische Zeitschriftenbibliothek (EZB)</h3>
-    <p>Wie beschaffe ich Aufsätze aus elektronischen Zeitschriften?</p>
-    <p>Die EZB (Elektronische Zeitschriftenbibliothek) bietet wissenschaftliche Zeitschriften an.
-Sie erreichen sie über die Webseiten der großen wissenschaftlichen Bibliotheken.</p>
-	<img class="zoomable" src="Bilder/03_wo_suche_ich_red.bmp"/>
-    <p>
-    	Hier können Sie nach Fachgebieten suchen. Das Ampelsystem zeigt Ihnen an, ob die Zeitschriften für jeden frei zugänglich sind oder nur in der entsprechenden Bibliothek vor Ort bzw. nur für registrierte Bibliotheksbenutzer verwendbar sind.
-     </p>
-     <h4>Tipp:</h4>        
-<p>
-     	Für lizenzierte Zeitschriften sollten Sie die EZB entweder in 
-        einer wissenschaftlichen Bibliothek vor Ort (z.B. Universitäts- 
-        oder Hochschulbibliothek) benutzen, da nur hier die Lizenzen 
-        freigeschaltet sind oder registrierter Benutzer einer Bibliothek 
-        sein, die die Lizenzen erworben hat (z.B. Staatsbibliothek)
-     </p>
+  <h3 id="Elektronische_Zeitschriftenbibliothek">Elektronische
+    Zeitschriftenbibliothek (EZB)</h3>
+  <p>Wie beschaffe ich Aufsätze aus elektronischen Zeitschriften?</p>
+  <p>Die EZB (Elektronische Zeitschriftenbibliothek) bietet
+    wissenschaftliche Zeitschriften an. Sie erreichen sie über die Webseiten der
+    großen wissenschaftlichen Bibliotheken.</p>
+  <img
+    class="zoomable"
+    src="Bilder/03_wo_suche_ich_red.bmp" />
+  <p>Hier können Sie nach Fachgebieten suchen. Das Ampelsystem zeigt Ihnen
+    an, ob die Zeitschriften für jeden frei zugänglich sind oder nur in der
+    entsprechenden Bibliothek vor Ort bzw. nur für registrierte
+    Bibliotheksbenutzer verwendbar sind.</p>
+  <h4>Tipp:</h4>
+  <p>Für lizenzierte Zeitschriften sollten Sie die EZB entweder in einer
+    wissenschaftlichen Bibliothek vor Ort (z.B. Universitäts- oder
+    Hochschulbibliothek) benutzen, da nur hier die Lizenzen freigeschaltet sind
+    oder registrierter Benutzer einer Bibliothek sein, die die Lizenzen erworben
+    hat (z.B. Staatsbibliothek)</p>
 </div>
