--- a/www_dir/directory/wieSucheIch/festlegungVonSuchbegriffen.html
+++ b/www_dir/directory/wieSucheIch/festlegungVonSuchbegriffen.html
@@ -39,14 +39,14 @@
         <p>Im Internet finden Sie zahlreiche Seiten, die die Suche nach alternativen Begriffen erleichtern:</p>
         <ul>
         	<li><a class="external-link" href="http://www.semager.de/keywords">Semager</a> (u.a. Synonyme, Ober- und Unterbegriffe)</li>
-        	<li><a class="external-link" href="http://www.semager.de/keywords">Canoo</a> (u.a. Synonyme, Ober- und Unterbegriffe)</li>
+        	<li><a class="external-link" href="http://www.canoo.net/">Canoo</a> (u.a. Synonyme, Ober- und Unterbegriffe)</li>
         	<li>
             	<a class="external-link" href="http://www.dwds.de/">
 					Digitales Wörterbuch der deutschen Sprache
             	</a>
                 	(u.a. Synonyme, Ober- und Unterbegriffe, Wortwolken, Links zu Artikeln der Wochenzeitung DIE ZEIT und ZEIT online)
             </li>
-        	<li><a class="external-link" href="http://www.duden.de/keywords">Duden</a> (Synonyme)</li>
+        	<li><a class="external-link" href="https://www.duden.de/woerterbuch">Duden</a> (Synonyme)</li>
         	<li><a class="external-link" href="http://wortschatz.uni-leipzig.de">Wortschatz</a> (u.a. Synonyme, Ober- und Unterbegriffe,verwandte Begriffe)</a></li>
             <li>
             	<a class="external-link" href="http://de.wikipedia.org">Wikipedia</a>
