--- a/www_dir/directory/woSucheIch/bibliotheken.html
+++ b/www_dir/directory/woSucheIch/bibliotheken.html
@@ -65,7 +65,7 @@
             onmouseout="UnHighlightPin('#SLBPotsdam');">Stadt- und
               Landesbibliothek im Bildungsforum Potsdam</a></li>
           <li><a
-            href="http://www.stadtbibliothek-frankfurt-oder.de/"
+            href="https://www.srbffo.de/index.aspx"
             onmouseover="HighlightPin('#SRBFrankfurt');"
             onmouseout="UnHighlightPin('#SRBFrankfurt');">Stadt- und
               Regionalbibliothek Frankfurt/Oder</a></li>
@@ -118,16 +118,12 @@
             onmouseout="UnHighlightPin('#EuropaUni');">Europa-Universität
               Viadrina Frankfurt/Oder</a></li>
           <li><a
-            href="http://www.tu-cottbus.de/bibliothek/"
-            onmouseover="HighlightPin('#TUCottbus');"
-            onmouseout="UnHighlightPin('#TUCottbus');">Brandenburgische
+            href="https://www.b-tu.de/bibliothek/"
+            onmouseover="HighlightPin('#TUCottbus');HighlightPin('#TUSenftenberg');"
+            onmouseout="UnHighlightPin('#TUCottbus');UnHighlightPin('#TUSenftenberg');">Brandenburgische
               Technische Universität Cottbus-Senftenberg</a></li>
-          <li><a
-            href="http://www.hs-lausitz.de/hochschulbibliothek.html"
-            onmouseover="HighlightPin('#TUSenftenberg');"
-            onmouseout="UnHighlightPin('#TUSenftenberg');">Brandenburgische
-              Technische Universität Senftenberg</a></li>
-        </ul></li>
+        </ul>
+      </li>
       <li><a
         href="#"
         onclick="Karte.PinsAnzeigen('#petrol', '#linkspetrol');"><img
@@ -164,7 +160,7 @@
             onmouseout="UnHighlightPin('#FHs');">Beuth Hochschule für
               Technik Berlin</a></li>
           <li><a
-            href="http://www.ash-berlin.eu/studienangebot/bibliothek/aktuelles/"
+            href="https://www.ash-berlin.eu/studium/einrichtungen-fuer-studierende/bibliothek/services/"
             onmouseover="HighlightPin('#FHs');"
             onmouseout="UnHighlightPin('#FHs');">Alice Salomon Hochschule
               Berlin</a></li>
