Einbindung externer Quellen (CSS, js, Fonts) nun wahlweise via https oder http möglich

--- a/www_dir/directory/welcheArtenVonMedien/zusammenfassung.html
+++ b/www_dir/directory/welcheArtenVonMedien/zusammenfassung.html
@@ -15,7 +15,7 @@
 	<p><strong>Sortieren Sie die Medien nach ihrer Eignung für das vorgegebene Thema.</strong></p>
 	
     <p><strong>Thema:</strong>Welche Auswirkungen hat die amerikanische Revolution auf die heutige amerikanische Politik?</p>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   	<style>
 		#list_1 li, #list_2 li {
 			transition:background-color .5s;
