--- a/www_dir/index.html
+++ b/www_dir/index.html
@@ -17,9 +17,9 @@
   type="text/css" />
 <!-- Fonts -->
 <link
-  href='http://fonts.googleapis.com/css?family=Roboto:100'
-  rel='stylesheet'
-  type='text/css'>
+  href="//fonts.googleapis.com/css?family=Roboto:100"
+  rel="stylesheet"
+  type="text/css">
 <meta charset="utf-8">
 <title>Tutorial Informationskompetenz</title>
 <script src="StartpageConfig.class.js"></script>
@@ -280,7 +280,7 @@ $( window ).resize ( function () {
 	init();
 });
 
-<!-- Funktionen, die das Impressum / Feedback ein- und ausblendet -->
+// <!-- Funktionen, die das Impressum / Feedback ein- und ausblendet -->
 function ImpressumAnzeigen () {	
 	$('#impressum').fadeIn();
 }
@@ -338,7 +338,7 @@ function feedbackAusblenden () {
         <a
           href="#"
           onclick="ImpressumAusblenden();"><span
-          id="schliessen"
+          id="impressum_schliessen"
           class="fa fa-times"></span></a>
         <h2>HERAUSGEBER</h2>
         <p>
@@ -516,7 +516,7 @@ function feedbackAusblenden () {
         <a
           href="#"
           onclick="feedbackAusblenden();"><span
-          id="schliessen"
+          id="feedback_schliessen"
           class="fa fa-times"></span></a>
         <h2>Feedback</h2>
         <p>
