= Text-Abschnitt hinzugefügt = Markup korrigiert

--- a/www_dir/directory/hausarbeit/zitieren.html
+++ b/www_dir/directory/hausarbeit/zitieren.html
@@ -1,85 +1,99 @@
 <h2>Zitieren</h2>
 <p>
-Die Nachprüfbarkeit von Aussagen gehört zu den zentralen Aspekten von Wissenschaft.
+  Die Nachprüfbarkeit von Aussagen gehört zu den zentralen Aspekten von Wissenschaft.
 </p>
 <p>
-Autoren wissenschaftlicher Arbeiten nehmen immer auf andere Arbeiten Bezug. Diese Quellen müssen angegeben werden. Werden Textstellen von anderen ohne deutliche Zitierung verwendet, wird dies als <span class="glossar Plagiat">Plagiat</span> bezeichnet, also ein Täuschungsversuch.
+  Autoren wissenschaftlicher Arbeiten nehmen immer auf andere Arbeiten Bezug. Diese Quellen müssen angegeben werden.
+  Werden Textstellen von anderen ohne deutliche Zitierung verwendet, wird dies als <span
+    class="glossar Plagiat">Plagiat</span> bezeichnet, also ein Täuschungsversuch.
 </p>
 <p>
-Man unterscheidet direkte und indirekte Zitate.
+  Man unterscheidet direkte und indirekte Zitate.
 </p>
 
 <h3>Direktes Zitat</h3>
 <p>
-Als direktes Zitat bezeichnet man die wörtliche Übernahme von Sätzen, Satzteilen oder Begriffen aus anderen Quellen. Direkt zitiert werden: 
-Gesetze, Formeln, Zahlen sowie Sachverhalte, die so kurz und präzise formuliert sind, dass dies mit eigenen Worten nicht besser gelingen kann.
+  Als direktes Zitat bezeichnet man die wörtliche Übernahme von Sätzen, Satzteilen oder Begriffen aus anderen Quellen.
+  Direkt zitiert werden:
+  Gesetze, Formeln, Zahlen sowie Sachverhalte, die so kurz und präzise formuliert sind, dass dies mit eigenen Worten
+  nicht besser gelingen kann.
 </p>
 <p>
-	<em>Beispiel</em>
+  <em>Beispiel</em>
 </p>
 <p>
-Immer mehr Frauen entscheiden sich heute erst nach Ausbildung und Karriere für eine Mutterschaft.
+  Immer mehr Frauen entscheiden sich heute erst nach Ausbildung und Karriere für eine Mutterschaft.
 </p>
 <p>
-	<em>
-„Die Reproduktionsmedizin schürt die Hoffnung, dass dieses Problem mit künstlicher Befruchtung zu lösen und Mutterschaft prinzipiell in jeder Lebensphase möglich ist.“ [1] 
-	</em>
+  <em>
+    „Die Reproduktionsmedizin schürt die Hoffnung, dass dieses Problem mit künstlicher Befruchtung zu lösen und
+    Mutterschaft prinzipiell in jeder Lebensphase möglich ist.“ [1]
+  </em>
 </p>
 <p>
-Erfahrungsgemäß verläuft eine Schwangerschaft bei Frauen ab 40 nicht anders als bei 20jährigen.
+  Erfahrungsgemäß verläuft eine Schwangerschaft bei Frauen ab 40 nicht anders als bei 20jährigen.
 </p>
-<hr/>
+<hr />
 [1] Fosen-Schlichtinger (2006), S.63
 
 <h3>Indirektes Zitat</h3>
 <p>
-Ein indirektes Zitat ist die sinngemäße Übernahme eines Textes von anderen Autoren in eigenen Worten.
+  Ein indirektes Zitat ist die sinngemäße Übernahme eines Textes von anderen Autoren in eigenen Worten.
 </p>
 <p>
-	<em>
-Beispiel
-	</em>
+  <em>
+    Beispiel
+  </em>
 </p>
 <p>
-Die Schwangerschaftsvorsorge hat vor allem das Down-Syndrom im Blick
+  Die Schwangerschaftsvorsorge hat vor allem das Down-Syndrom im Blick
 </p>
 <p>
-Bei Bestätigung der Diagnose in der Fruchtwasseruntersuchung gerät die werdende Mutter in einen Entscheidungskonflikt. [2]
+  Bei Bestätigung der Diagnose in der Fruchtwasseruntersuchung gerät die werdende Mutter in einen Entscheidungskonflikt.
+  [2]
 </p>
 <p>
-Mit diesem Wissen entscheiden sich Frauen oftmals für eine Abtreibung, denn sie möchten kein krankes Kind gebären und großziehen.
+  Mit diesem Wissen entscheiden sich Frauen oftmals für eine Abtreibung, denn sie möchten kein krankes Kind gebären und
+  großziehen.
 </p>
-<hr/>
+<hr />
 [2] Vgl. Krumpholz-Reichel (2006), S. 68
 
+<p>Sowohl bei direkten als auch bei indirekten Zitaten müssen die Quellen angegeben werden. Diese Angabe können Sie entweder gleich im Fließtext oder aber auch unten in einer Fußnote machen. Achten Sie darauf, sich für eine Möglichkeit zu entscheiden und diese einheitlich in Ihrer Hausarbeit anzuwenden.</p>
 
 <h3>Quellenangabe im Text</h3>
 <h4>Beispiel Buch</h4>
 <p>
-Mit dem mütterlichen Alter steigt das Risiko für Chromosomenfehlverteilungen (vgl. Zirn 2009, S.21). In der genetischen Sprechstunde können sich Paare über Möglichkeiten vorgeburtlicher Diagnostik informieren.
+  Mit dem mütterlichen Alter steigt das Risiko für Chromosomenfehlverteilungen (vgl. Zirn 2009, S.21). In der
+  genetischen Sprechstunde können sich Paare über Möglichkeiten vorgeburtlicher Diagnostik informieren.
 </p>
 
 <h4>Beispiel Internettext</h4>
 <p>
-Um eventuelle Gefahren von Mutter und Kind frühzeitig zu erkennen und abzuwenden, wird eine ausreichende ärztliche Betreuung während der Schwangerschaft und Geburt gesetzlich geregelt (vgl. Nagel 2012, S. 6.). Dabei können verschiedene Behandlungsmethoden der pränatalen Diagnostik eingesetzt werden.
+  Um eventuelle Gefahren von Mutter und Kind frühzeitig zu erkennen und abzuwenden, wird eine ausreichende ärztliche
+  Betreuung während der Schwangerschaft und Geburt gesetzlich geregelt (vgl. Nagel 2012, S. 6.). Dabei können
+  verschiedene Behandlungsmethoden der pränatalen Diagnostik eingesetzt werden.
 </p>
 
 <h4>Beispiel Zeitschriftenaufsatz</h4>
 <p>
-Vorgeburtliche Erfahrungen können tiefe Eindrücke bei den Embryos hinterlassen. So erkennen sie nicht nur die Stimme der Mutter, sondern auch deren Sprache. (vgl. Geuter 2006, S. 70-71). Ebenso bekommen sie die Stimmungen der Mutter mit.
+  Vorgeburtliche Erfahrungen können tiefe Eindrücke bei den Embryos hinterlassen. So erkennen sie nicht nur die Stimme
+  der Mutter, sondern auch deren Sprache. (vgl. Geuter 2006, S. 70-71). Ebenso bekommen sie die Stimmungen der Mutter
+  mit.
 </p>
 
 <h4>Gestaltung der Zitate</h4>
 <ul>
-	<li>
-		Längere wörtliche Zitate sollten etwa 1 cm links und rechts eingerückt werden.
-	</li>
-	<li>
-		Innerhalb eines direkten Zitats sollten Sie Wörter oder ganze Textteile nur dann auslassen, wenn die Aussage dadurch nicht verfälscht wird.
-		<ol>
-			<li> Ein einzelnes Wort wird durch zwei Punkte [..] ersetzt.</li>
-			<li> Mehrere Wörter werden durch drei Punkte [...] ersetzt.</li>
-       	</ol>
-    </li>   
-	<li>Zitate in einer Fremdsprache müssen Sie im Original wiedergeben und in einer Fußnote übersetzen.</li>
+  <li>
+    Längere wörtliche Zitate sollten etwa 1 cm links und rechts eingerückt werden.
+  </li>
+  <li>
+    Innerhalb eines direkten Zitats sollten Sie Wörter oder ganze Textteile nur dann auslassen, wenn die Aussage dadurch
+    nicht verfälscht wird.
+    <ol>
+      <li> Ein einzelnes Wort wird durch zwei Punkte [..] ersetzt.</li>
+      <li> Mehrere Wörter werden durch drei Punkte [...] ersetzt.</li>
+    </ol>
+  </li>
+  <li>Zitate in einer Fremdsprache müssen Sie im Original wiedergeben und in einer Fußnote übersetzen.</li>
 </ul>
