update URL ViFa Sportwissenschaft

--- a/www_dir/directory/welcheArtenVonMedien/fachzeitschriftenUndKonferenzberichte.html
+++ b/www_dir/directory/welcheArtenVonMedien/fachzeitschriftenUndKonferenzberichte.html
@@ -12,7 +12,7 @@
     </p>
     <p>
     	Zugang zu Zeitschriftenaufsätzen bieten die sogenannten <a class="external-link" href="http://www.gbv.de/bibliotheken/vifa-olc-ssg">Virtuellen Fachbibliotheken</a> (ViFa´s), wie zum Beispiel die 
-        <a class="external-link" href="http://www.vifasport.de">ViFa Sportwissenschaft</a> 
+        <a class="external-link" href="https://vufind.dshs-koeln.de/">ViFa Sportwissenschaft</a> 
         Einige Aufsätze können dort kostenlos heruntergeladen werden.
     </p>
     <h3>Beispiel</h3>
